[gd_scene load_steps=5 format=3 uid="uid://bdwklf8e1ohe5"]

[ext_resource type="Theme" uid="uid://c1381xujec7ub" path="res://scenes/ui/game_ui_theme.tres" id="1_fnqby"]
[ext_resource type="Script" uid="uid://3mj5yalbwfon" path="res://scenes/ui/day_and_night_panel.gd" id="2_25t5k"]
[ext_resource type="Texture2D" uid="uid://ut4wios25gn1" path="res://assets/sproutlands/ui/basic_ui_sprites.png" id="3_xc6ft"]

[sub_resource type="AtlasTexture" id="AtlasTexture_k3f4j"]
atlas = ExtResource("3_xc6ft")
region = Rect2(437, 34, 7, 12)

[node name="DayAndNightPanel" type="Control"]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
grow_horizontal = 0
theme = ExtResource("1_fnqby")
script = ExtResource("2_25t5k")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -52.0
offset_bottom = 40.0
grow_horizontal = 0

[node name="DayContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3

[node name="DayLabel" type="Label" parent="VBoxContainer/DayContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_type_variation = &"SquareLabel"
text = "Day 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TimeContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="TimeLabel" type="Label" parent="VBoxContainer/TimeContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_type_variation = &"SquareLabel"
text = "00:00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="."]
anchors_preset = 0
offset_left = -83.0
offset_top = 61.0
offset_right = -3.0
offset_bottom = 79.0

[node name="NormalSpeedButton" type="Button" parent="Control"]
layout_mode = 0
offset_right = 26.0
offset_bottom = 18.0
theme_type_variation = &"ImageButton"

[node name="TextureRect" type="TextureRect" parent="Control/NormalSpeedButton"]
layout_mode = 0
offset_left = 10.0
offset_top = 2.0
offset_right = 17.0
offset_bottom = 14.0
texture = SubResource("AtlasTexture_k3f4j")

[node name="FastSpeedButton" type="Button" parent="Control"]
offset_left = 27.0
offset_right = 53.0
offset_bottom = 18.0
theme_type_variation = &"ImageButton"

[node name="TextureRect2" type="TextureRect" parent="Control/FastSpeedButton"]
offset_left = 7.0
offset_top = 2.0
offset_right = 14.0
offset_bottom = 14.0
texture = SubResource("AtlasTexture_k3f4j")

[node name="TextureRect" type="TextureRect" parent="Control/FastSpeedButton"]
offset_left = 12.0
offset_top = 2.0
offset_right = 19.0
offset_bottom = 14.0
texture = SubResource("AtlasTexture_k3f4j")

[node name="CheaterSpeedButton" type="Button" parent="Control"]
offset_left = 54.0
offset_right = 80.0
offset_bottom = 18.0
theme_type_variation = &"ImageButton"

[node name="TextureRect3" type="TextureRect" parent="Control/CheaterSpeedButton"]
offset_left = 5.0
offset_top = 2.0
offset_right = 12.0
offset_bottom = 14.0
texture = SubResource("AtlasTexture_k3f4j")

[node name="TextureRect" type="TextureRect" parent="Control/CheaterSpeedButton"]
offset_left = 10.0
offset_top = 2.0
offset_right = 17.0
offset_bottom = 14.0
texture = SubResource("AtlasTexture_k3f4j")

[node name="TextureRect2" type="TextureRect" parent="Control/CheaterSpeedButton"]
offset_left = 15.0
offset_top = 2.0
offset_right = 22.0
offset_bottom = 14.0
texture = SubResource("AtlasTexture_k3f4j")

[connection signal="pressed" from="Control/NormalSpeedButton" to="." method="_on_normal_speed_button_pressed"]
[connection signal="pressed" from="Control/FastSpeedButton" to="." method="_on_fast_speed_button_pressed"]
[connection signal="pressed" from="Control/CheaterSpeedButton" to="." method="_on_cheater_speed_button_pressed"]
